Fix OA brand not showing on mobile due to CSS specificity
.navbar-brand span (specificity 0,1,1) was overriding
.navbar-brand-short (0,1,0). Use .navbar-brand .navbar-brand-short
(0,2,0) to win the cascade.

--- a/src/ui/static/css/mobile.css
+++ b/src/ui/static/css/mobile.css
@@ -197,7 +197,7 @@ body.is-pwa {
         display: none;
     }
 
-    .navbar-brand-short {
+    .navbar-brand .navbar-brand-short {
         display: inline;
     }
 
